--- a/src/components/Card/_Card.scss
+++ b/src/components/Card/_Card.scss
@@ -13,7 +13,6 @@
     margin: 3vh;
     h2 {
       font-size: 1.2rem;
-      font-family: $fontFamily;
       font-weight: 700;
       color: $gray;
       text-align: center;
