--- a/src/components/Layout/_Layout.scss
+++ b/src/components/Layout/_Layout.scss
@@ -10,9 +10,9 @@
     width: 100%;
     min-height: 100vh;
     height: fit-content;
-    padding: 10vh 0 15vh 0;
+    padding: 10vh 0 10vh 0;
     @include media($md) {
-      padding: 8vh 0 20vh 0;
+      padding: 8vh 0 15vh 0;
     }
   }
   .whatsapp-button {
