--- a/src/components/Map/_Map.scss
+++ b/src/components/Map/_Map.scss
@@ -2,6 +2,7 @@ iframe {
   min-height: 100vh;
   width: 100%;
   border: none;
+  margin-bottom: 2.5vh;
   @include media($xs) {
     width: 100vw;
   }
