--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -9,7 +9,6 @@
     font-weight: 400;
     color: $darkGray;
     text-align: center;
-    gap: 5vh;
     @include media($xs) {
       width: 96%;
     }
